<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_map"
            android:checkable="false"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/nav_map" />
        <item
            android:id="@+id/nav_event"
            android:checkable="false"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/nav_events" />

        <item
            android:id="@+id/nav_my_events"
            android:checkable="false"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/nav_myEvents" />
    </group>
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_outline_black_24dp"
            android:title="@string/nav_help_info" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_phonelink_erase_black_24dp"
            android:title="@string/nav_logout" />
            </group>
</menu>
