<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/take7"
    tools:context="com.example.gebruiker.sportapp.Homepage.Instellingen.preferences"
    android:orientation="vertical">


    <CheckBox
        android:id="@+id/etenBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:buttonTint="#ffffff"
        android:fontFamily="fonts/Roboto-Regular.ttf"
        android:text="@string/basketbal"
        android:textColor="#ffffff"
        android:textSize="18dp" />

    <CheckBox
        android:id="@+id/muziekBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:buttonTint="#ffffff"
        android:fontFamily="fonts/Roboto-Regular.ttf"
        android:text="@string/boksen"
        android:textColor="#ffffff"
        android:textSize="18dp" />

    <CheckBox
        android:id="@+id/sportenBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:buttonTint="#ffffff"
        android:fontFamily="fonts/Roboto-Regular.ttf"
        android:text="@string/gym"
        android:textColor="#ffffff"
        android:textSize="18dp" />

    <CheckBox
        android:id="@+id/gamingBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:buttonTint="#ffffff"
        android:fontFamily="fonts/Roboto-Regular.ttf"
        android:text="@string/hardlopen"
        android:textColor="#ffffff"
        android:textSize="18dp" />

    <CheckBox
        android:id="@+id/dierenBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:buttonTint="#ffffff"
        android:fontFamily="fonts/Roboto-Regular.ttf"
        android:text="@string/hockey"
        android:textColor="#ffffff"
        android:textSize="18dp" />

    <CheckBox
        android:id="@+id/schrijvenBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:buttonTint="#ffffff"
        android:fontFamily="fonts/Roboto-Regular.ttf"
        android:text="@string/rugby"
        android:textColor="#ffffff"
        android:textSize="18dp" />

    <CheckBox
        android:id="@+id/winkelenBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:buttonTint="#ffffff"
        android:fontFamily="fonts/Roboto-Regular.ttf"
        android:text="@string/tennis"
        android:textColor="#ffffff"
        android:textSize="18dp" />

    <CheckBox
        android:id="@+id/familieBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:buttonTint="#ffffff"
        android:fontFamily="fonts/Roboto-Regular.ttf"
        android:text="@string/voetbal"
        android:textColor="#ffffff"
        android:textSize="18dp" />

    <CheckBox
        android:id="@+id/vriendenBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:buttonTint="#ffffff"
        android:fontFamily="fonts/Roboto-Regular.ttf"
        android:text="@string/volleybal"
        android:textColor="#ffffff"
        android:textSize="18dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/savePreferences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/loginbutton"
            android:fontFamily="fonts/Roboto-Regular.ttf"
            android:onClick="buttonClick"
            android:text="@string/saveSettings"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/language"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="1dp"
            android:clickable="true"
            android:fontFamily="fonts/Roboto-Regular.ttf"
            android:text="@string/selectLang"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/eng"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="1dp"
            android:layout_weight="0.49"
            android:background="@drawable/loginbutton"
            android:fontFamily="fonts/Roboto-Regular.ttf"
            android:onClick="buttonClick"
            android:text="@string/eng"
            android:drawableLeft="@drawable/eng_icon"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="18dp" />

        <Button
            android:id="@+id/nl"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="1dp"
            android:layout_weight="0.49"
            android:background="@drawable/loginbutton"
            android:fontFamily="fonts/Roboto-Regular.ttf"
            android:onClick="buttonClick"
            android:drawableLeft="@drawable/nl_icon"
            android:text="@string/nl"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="18dp" />
    </LinearLayout>

</LinearLayout>
