<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/take7"
    android:orientation="vertical"
    android:padding="25dp"
    android:weightSum="1"
    tools:context="com.example.gebruiker.sportapp.Beginscherm.login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:fontFamily="fonts/Roboto-Regular.ttf"
        android:text="@string/registratie"
        android:textAlignment="center"
        android:textColor="#e30000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_weight="0.15"
        android:background="@drawable/border_buttons"
        android:fontFamily="fonts/Roboto-Regular.ttf"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textColorHint="#aaaaaa"
        android:textCursorDrawable="@null"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_weight="0.15"
        android:background="@drawable/border_buttons"
        android:fontFamily="fonts/Roboto-Regular.ttf"
        android:hint="@string/emailadress"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textColorHint="#aaaaaa"
        android:textCursorDrawable="@null"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_weight="0.15"
        android:background="@drawable/border_buttons"
        android:fontFamily="fonts/Roboto-Regular.ttf"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textColorHint="#aaaaaa"
        android:textCursorDrawable="@null"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/passwordVerify"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_weight="0.15"
        android:background="@drawable/border_buttons"
        android:fontFamily="fonts/Roboto-Regular.ttf"
        android:hint="@string/passwordAck"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textColorHint="#aaaaaa"
        android:textCursorDrawable="@null"
        android:textSize="14sp" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/loginbutton"
        android:fontFamily="fonts/Roboto-Regular.ttf"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/backToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:fontFamily="fonts/Roboto-Regular.ttf"
        android:onClick="goToAlert"
        android:text="@string/returnB"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#afb9ff"
        android:textSize="14sp" />

</LinearLayout>
